# LangChain-Vector-Databases-in-Production

./: README.md  prompt_use_case.py  pyproject.toml  summarization_chain_example.py  transformer_tokens.py
config/: base.py  config_llm.py
src/: articles_summarizer.py  chain_prompting.py  conversional_capabilities.py  few_shot_prompting.py  prompt_templates.py  prompt_use_case.py  qa_chain.py  summarization_chain_example.py  transformer_tokens.py
